# kxbuffer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/entry/: bool.h  container_of.h  macros.h  types.h
include/kernyx/: alloc.h  kx.h  pool.h  refcount.h
src/: CMakeLists.txt  alloc.c  pool.c  refcount.c
